NN-5081 increased test jvm args