@@ -1,12 +1,12 @@
 plugins {
   id("uk.gov.justice.hmpps.gradle-spring-boot") version "5.4.0"
-  kotlin("plugin.spring") version "1.9.0"
-  kotlin("plugin.jpa") version "1.9.0"
+  kotlin("plugin.spring") version "1.9.10"
+  kotlin("plugin.jpa") version "1.9.10"
 }
 
 // DO NOT UPDATE - BREAKS CAMEL / GROOVY
-val spockVersion = "2.4-M1-groovy-3.0"
-val gebishVersion = "6.0"
+val spockVersion = "2.4-M1-groovy-4.0"
+val gebishVersion = "7.0"
 
 dependencies {
   annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
@@ -42,18 +42,18 @@ dependencies {
   runtimeOnly("org.hsqldb:hsqldb")
   implementation("org.flywaydb:flyway-core")
   runtimeOnly("org.postgresql:postgresql")
-  testImplementation("org.codehaus.groovy:groovy-all:3.0.18")
+  testImplementation("org.codehaus.groovy:groovy-all:3.0.19")
   testImplementation("org.spockframework:spock-spring:$spockVersion") // Upgrade breaks groovy
   testImplementation("org.spockframework:spock-core:$spockVersion") { // Upgrade breaks groovy
     exclude("org.codehaus.groovy")
   }
   testCompileOnly("org.projectlombok:lombok")
-  testImplementation("com.github.tomakehurst:wiremock-jre8-standalone:2.35.0")
+  testImplementation("com.github.tomakehurst:wiremock-jre8-standalone:3.0.1")
   testImplementation("org.gebish:geb-core:$gebishVersion") // Upgrade breaks groovy
   testImplementation("org.gebish:geb-spock:$gebishVersion") // Upgrade breaks groovy
-  testImplementation("org.seleniumhq.selenium:selenium-support:4.11.0")
-  testImplementation("org.seleniumhq.selenium:selenium-chrome-driver:4.11.0")
-  testImplementation("org.seleniumhq.selenium:selenium-firefox-driver:4.11.0")
+  testImplementation("org.seleniumhq.selenium:selenium-support:4.12.1")
+  testImplementation("org.seleniumhq.selenium:selenium-chrome-driver:4.12.1")
+  testImplementation("org.seleniumhq.selenium:selenium-firefox-driver:4.12.1")
   testImplementation("io.github.http-builder-ng:http-builder-ng-apache:1.0.4")
   testImplementation("com.github.tomjankes:wiremock-groovy:0.2.0")
   testImplementation("net.javacrumbs.json-unit:json-unit-assertj:3.0.0")
@@ -81,6 +81,9 @@ tasks {
   }
 
   test {
+    minHeapSize = "512m"
+    maxHeapSize = "1024m"
+    jvmArgs = listOf("-XX:MaxPermSize=512m")
     jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
   }
 }
